--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Metadata -->
+  <meta name="author" content="Ralanda Wells">
+  <meta name="description" content="A website for the prayers of Ralanda Wells.">
+  <meta property="og:title" content="Ralanda Prays" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ralandaprays.com" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:description" content="A website for the prayers of Ralanda Wells.">
 </head>
 <body>
   <app-root></app-root>
